--- a/pom.xml
+++ b/pom.xml
@@ -27,16 +27,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
-<!--                    <excludes>-->
-<!--                        <exclude>com/robertomessabrasil/carreseller/domain/service/StoreService.java</exclude>-->
-<!--                        <exclude>com/robertomessabrasil/carreseller/domain/service/StoreService.java</exclude>-->
-<!--                    </excludes>-->
-<!--                    <testExcludes>-->
-<!--                        <testExclude>com/robertomessabrasil/carreseller/StoreTest.java</testExclude>-->
-<!--                    </testExcludes>-->
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
@@ -65,6 +59,11 @@
             <artifactId>mockito-junit-jupiter</artifactId>
             <version>4.0.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.robertomessabrasil</groupId>
+            <artifactId>jwatch-lib</artifactId>
+            <version>1.1</version>
         </dependency>
     </dependencies>
 
