fix: stripped old example features

--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>tech-test-carreseller</artifactId>
+    <groupId>io.github.robertomessabrasil</groupId>
+    <artifactId>ddd-as-dependency</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>tech-test-carreseller</name>
-    <url>http://maven.apache.org</url>
+    <name>DDD as Dependency</name>
+    <url>https://io.github.robertomessabras/ddd-as-dependencyl</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
